# book_babies

./: .gitignore  BookBabies_EDA1.ipynb  BookBabies_EDA2.ipynb  BookBabies_Embeddings1.ipynb  README.md  Untitled.ipynb  df_meta.tsv  pyproject.toml  titles.tsv
