[tool.poetry]
name = "book-babies"
version = "0.1.0"
description = "system to find a book which is a blend between two parent books, a sort of user-interactive book recommender"
authors = ["zemerica <zemerica@gmail.com>"]
license = "CC BY-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
notebook = "^7.2.2"
pandas = "^2.2.3"
polars = "^1.10.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tqdm = "^4.66.5"
numpy = "1.26.4"
tensorflow = "2.16.2"
tensorflow-recommenders = "0.7.2"
tensorflow-hub = "^0.16.1"
transformers = "^4.45.2"
torch = "2.2.2"
flagembedding = "^1.2.11"
peft = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
